fix: spacing between file name label and progress bar, upload tab layout

--- a/application/src/main/resources/org/utdteamthreefive/ui/tab.css
+++ b/application/src/main/resources/org/utdteamthreefive/ui/tab.css
@@ -25,3 +25,13 @@
 .tab:focused {
     -fx-border-width: 0;
 }
+
+.upload-vbox {
+    -fx-spacing: 16px;
+}
+
+.upload-button {
+    -fx-background-radius: 5px;
+    -fx-text-fill: white;
+    -fx-background-color: #007aff;
+}
